--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-<title>Volta pro Brasil</title>
+<title>Volta pro Brasil 😂</title>
 
 <style>
 * {
@@ -16,59 +16,66 @@
 
 body {
   height: 100vh;
-  background: linear-gradient(270deg, #ff0080, #7928ca, #00c6ff);
-  background-size: 600% 600%;
-  animation: bgMove 8s ease infinite;
+  overflow: hidden;
+  background: radial-gradient(circle at top, #ffea00, #ff0080, #5f00ff);
+  animation: bgCrazy 6s infinite alternate;
   display: flex;
   align-items: center;
   justify-content: center;
-  overflow: hidden;
 }
 
-@keyframes bgMove {
-  0% {background-position: 0% 50%;}
-  50% {background-position: 100% 50%;}
-  100% {background-position: 0% 50%;}
+@keyframes bgCrazy {
+  0% { filter: hue-rotate(0deg); }
+  100% { filter: hue-rotate(360deg); }
 }
 
 .container {
+  width: 95%;
+  max-width: 400px;
   text-align: center;
-  padding: 20px;
   color: #fff;
 }
 
 h1 {
-  font-size: 1.9rem;
+  font-size: 2rem;
   margin-bottom: 30px;
-  animation: pulse 1.5s infinite;
-  text-shadow: 2px 2px 10px rgba(0,0,0,.5);
+  animation: pulse 1.2s infinite, shake 4s infinite;
+  text-shadow: 0 0 15px #000;
 }
 
 @keyframes pulse {
-  0% { transform: scale(1); }
-  50% { transform: scale(1.08); }
-  100% { transform: scale(1); }
+  0%,100% { transform: scale(1); }
+  50% { transform: scale(1.1); }
 }
 
-.buttons {
+@keyframes shake {
+  0% { transform: translateX(0); }
+  2% { transform: translateX(-4px); }
+  4% { transform: translateX(4px); }
+  6% { transform: translateX(0); }
+}
+
+.area {
   position: relative;
   width: 100%;
   height: 220px;
+  margin-top: 20px;
 }
 
 button {
-  padding: 16px 30px;
-  font-size: 1.2rem;
+  padding: 18px 32px;
+  font-size: 1.3rem;
   border: none;
-  border-radius: 50px;
+  border-radius: 60px;
   cursor: pointer;
-  transition: all .2s ease;
+  position: absolute;
 }
 
 #yes {
+  position: relative;
   background: #00ff88;
   color: #000;
-  box-shadow: 0 0 20px #00ff88;
+  box-shadow: 0 0 25px #00ff88;
 }
 
 #yes:active {
@@ -76,13 +83,30 @@ button {
 }
 
 #no {
-  position: absolute;
-  background: #ff4444;
+  background: #ff0033;
   color: #fff;
-  box-shadow: 0 0 20px #ff4444;
+  box-shadow: 0 0 25px #ff0033;
   left: 50%;
   top: 120px;
   transform: translateX(-50%);
+  transition: top .15s, left .15s;
+}
+
+/* partículas */
+.particle {
+  position: fixed;
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  pointer-events: none;
+  animation: fall 3s linear forwards;
+}
+
+@keyframes fall {
+  to {
+    transform: translateY(120vh) rotate(360deg);
+    opacity: 0;
+  }
 }
 </style>
 </head>
@@ -92,21 +116,23 @@ button {
 <div class="container">
   <h1>Vamos levar o Vinícius<br>de volta para o Brasil? 🇧🇷😂</h1>
 
-  <div class="buttons">
-    <button id="yes">SIM 🇧🇷</button>
+  <button id="yes">SIM 🇧🇷</button>
+
+  <div class="area" id="area">
     <button id="no">NÃO ❌</button>
   </div>
 </div>
 
 <script>
 const noBtn = document.getElementById('no');
-
-noBtn.addEventListener('touchstart', fugir);
-noBtn.addEventListener('mouseover', fugir);
+const area = document.getElementById('area');
 
 function fugir() {
-  const maxX = window.innerWidth - noBtn.offsetWidth;
-  const maxY = window.innerHeight - noBtn.offsetHeight;
+  const areaRect = area.getBoundingClientRect();
+  const btnRect = noBtn.getBoundingClientRect();
+
+  const maxX = areaRect.width - btnRect.width;
+  const maxY = areaRect.height - btnRect.height;
 
   const x = Math.random() * maxX;
   const y = Math.random() * maxY;
@@ -114,18 +140,30 @@ function fugir() {
   noBtn.style.left = x + 'px';
   noBtn.style.top = y + 'px';
 
-  if (navigator.vibrate) {
-    navigator.vibrate(80);
-  }
+  if (navigator.vibrate) navigator.vibrate(100);
 }
 
+noBtn.addEventListener('touchstart', fugir);
+noBtn.addEventListener('mouseover', fugir);
+
+// WhatsApp
 document.getElementById('yes').onclick = () => {
   const texto = encodeURIComponent(
     "SIM! Vamos levar o Vinícius de volta pro Brasil 🇧🇷😂"
   );
-
   window.location.href = `https://wa.me/5511995691181?text=${texto}`;
 };
+
+// partículas infinitas
+setInterval(() => {
+  const p = document.createElement('div');
+  p.className = 'particle';
+  p.style.left = Math.random() * 100 + 'vw';
+  p.style.background = `hsl(${Math.random()*360},100%,50%)`;
+  document.body.appendChild(p);
+
+  setTimeout(() => p.remove(), 3000);
+}, 200);
 </script>
 
 </body>
